--- a/angular.json
+++ b/angular.json
@@ -87,7 +87,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "./node_modules/leaflet/dist/leaflet.css"
+
             ],
             "scripts": []
           }
